# db/models/seccion.js
@@ -14,32 +14,59 @@ module.exports = (sequelize, DataTypes) => {
       //   foreignKey: {
       //     name: 'id_seccion',
       //     allowNull: false
-      //   }
+      //   },
+
       // })
-      Seccion.hasMany(models.Estudiante_Seccion);
+      Seccion.hasMany(models.Estudiante_Seccion, {
+        foreignKey: {
+          name: 'id_seccion',
+          allowNull: false
+        },
+        // as: {
+        //   singular: 'estudiante_seccion',
+        //   plural: 'estudiantes_secciones'
+        // }
+
+      });
       Seccion.belongsTo(models.Docente, {
         foreignKey: {
           name: 'id_docente',
           allowNull: false
         }
-      })
+      });
+      Seccion.belongsTo(models.Asignatura, {
+        foreignKey: {
+          name: 'id_asignatura',
+          allowNull: false
+        }
+      });
+      Seccion.belongsTo(models.Horario, {
+        foreignKey: {
+          name: 'id_horario',
+          allowNull: false
+        }
+      });
 
     }
   }
   Seccion.init({
     id: { type: DataTypes.INTEGER, allowNull: false, primaryKey: true, autoIncrement: true, unique: true },
-    id_asignatura: { type: DataTypes.INTEGER, allowNull: false },
     id_horario: { type: DataTypes.INTEGER, allowNull: false },
+    id_asignatura: { type: DataTypes.INTEGER, allowNull: false },
     numero: { type: DataTypes.INTEGER, allowNull: false },
-    id_profesor: { type: DataTypes.INTEGER, allowNull: false },
-    periodo: { type: DataTypes.INTEGER, allowNull: false },
-    year: { type: DataTypes.DATE, allowNull: false },
+    id_docente: { type: DataTypes.INTEGER, allowNull: false },
     aula: { type: DataTypes.STRING, allowNull: false },
     is_active: { type: DataTypes.BOOLEAN, allowNull: false },
     calificacion_base_mt: { type: DataTypes.INTEGER, allowNull: false },
   }, {
     sequelize,
-    modelName: 'Seccion',
+    modelName: 'Secciones',
+    freezeTableName: true,
+    // as: {
+    //   singular: 'seccion',
+    //   plural: 'secciones'
+    // }
+
   });
   return Seccion;
 };
